--- a/copybook/templates/standard.j2
+++ b/copybook/templates/standard.j2
@@ -12,13 +12,31 @@
             stroke="gray" stroke-dasharray="3,2"/>
       <line x1="{{ x + grid }}" y1="{{ y }}" x2="{{ x }}" y2="{{ y + grid }}" 
             stroke="gray" stroke-dasharray="3,2"/>
+
       {% if ns.char_index < text_list | length %}
       <text x="{{ grid//2 + x }}" y="{{ grid//2 + y }}" 
             font-family="{{ font }}" font-size="{{ font_size }}" 
             fill="{{ font_color }}" opacity="{{ font_opacity }}" 
             text-anchor="middle" dominant-baseline="central">
-        {{ text_list[ns.char_index] }}
+        {{ text_list[ns.char_index][0] }}
       </text>
+
+      {% if text_list[ns.char_index][1] %}
+      <text x="{{x + grid//15}}" y="{{y + grid*9//10}}" 
+        font-family="{{ font }}" font-size="{{ font_size//4 }}"
+        fill="{{ font_color }}" opacity="{{ font_opacity }}">
+        {{ text_list[ns.char_index][1] }}
+      </text>
+      {% endif %}
+
+      {% if text_list[ns.char_index][2] %}
+      <text x="{{x + grid*8//10}}" y="{{y + grid*9//10}}"
+        font-family="{{ font }}" font-size="{{ font_size//4 }}"
+        fill="{{ font_color }}" opacity="{{ font_opacity }}">
+        {{ text_list[ns.char_index][2] }}
+      </text>
+      {% endif %}
+
       {% endif %}
       {% set ns.char_index = ns.char_index + 1 %}
     {% endfor %}
